Trying to prevent url bar from moving on mobile

--- a/src/client/public/styles.css
+++ b/src/client/public/styles.css
@@ -12,6 +12,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: hidden;
   overscroll-behavior-y: contain;
 }
 
